--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Estudio Villa<h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Estudio Villa</title>
+</head>
+<body>
+    <h1>Estudio Villa</h1>
+</body>
+</html>
