--- a/licencias_y_beneficios.html
+++ b/licencias_y_beneficios.html
@@ -4,83 +4,123 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Guía rápida de licencias y beneficios bancarios — CCT 18/75</title>
+    <title>Guía rápida de licencias y beneficios bancarios — Villa & Asociados</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            /* Paleta tomada de tu sitio */
-            --va-bg: transparent;
-            --va-surface: #efe3cc;
-            --va-surface-2: #e6d8bd;
-            --va-surface-3: #f6edd8;
-            --va-ink: #252525;
-            --va-muted: #6f6f6f;
-            --va-primary: #b08b57;
-            --va-outline: #cbb894;
-            --va-focus: #6f9bd2;
-            --va-radius: 16px;
-            --va-shadow: 0 10px 25px rgba(0, 0, 0, .10);
+            /* Paleta de Villa & Asociados */
+            --sand: #efe2cc;
+            --sand-2: #f6eddc;
+            --charcoal: #474747;
+            --graphite: #2f2f2f;
+            --accent: #b89a72;
+            --ring: #cab28c;
+            --white: #fff;
+            --radius: 16px;
+            --shadow: 0 6px 16px rgba(0,0,0,0.06);
             --transition: all 0.3s ease;
         }
 
         * {
-            box-sizing: border-box
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
 
         body {
-            background: var(--va-bg);
-            color: var(--va-ink);
-            margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+            background: var(--sand);
+            color: var(--graphite);
+            font-family: "Montserrat", sans-serif;
             line-height: 1.5;
         }
 
-        .va-calc {
-            --pad: 16px;
-            max-width: 1200px;
-            margin: 24px auto 64px;
-            padding: 0 var(--pad)
+        /* Header estilo Villa & Asociados */
+        .topbar {
+            background: var(--sand);
+            border-bottom: 1px solid var(--ring);
+            padding: 14px 22px;
+            display: flex;
+            align-items: center;
+            gap: 14px;
         }
 
-        .va-header {
+        .brand {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            font-weight: 700;
+            color: var(--graphite);
+        }
+
+        .logo {
+            width: 42px;
+            height: 42px;
+            border-radius: 10px;
             display: grid;
-            justify-items: center;
+            place-items: center;
+            background: var(--sand-2);
+            border: 1px solid var(--ring);
+            font-weight: 800;
+            color: var(--graphite);
+        }
+
+        .brand-text {
+            line-height: 1.2;
+        }
+
+        .brand small {
+            font-size: 0.75rem;
+            font-weight: 500;
+            color: var(--charcoal);
+        }
+
+        /* Contenedor principal */
+        .va-calc {
+            max-width: 1200px;
+            margin: 30px auto 60px;
+            padding: 0 20px;
+        }
+
+        /* Header con estilo de Villa & Asociados */
+        .va-header {
+            background: var(--sand-2);
+            border: 1px solid var(--ring);
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
+            padding: 25px;
             text-align: center;
-            gap: 8px;
-            margin-bottom: 20px;
-            padding: 20px 16px;
-            background: linear-gradient(180deg, #efe3cc, #fff7e7);
-            border: 1px solid var(--va-outline);
-            border-radius: 20px;
-            box-shadow: var(--va-shadow)
+            margin-bottom: 25px;
         }
 
         .va-title {
             margin: 0;
-            font-size: clamp(1.5rem, 1rem + 2vw, 2.4rem);
-            letter-spacing: .4px;
-            font-weight: 800;
-            text-transform: uppercase;
+            font-size: clamp(1.5rem, 1rem + 2vw, 2.2rem);
+            font-weight: 700;
+            color: var(--graphite);
             line-height: 1.2;
+            margin-bottom: 10px;
         }
 
         .va-sub {
-            margin: 12px 0 0;
-            color: var(--va-muted);
+            margin: 0;
+            color: var(--charcoal);
             font-size: 1rem;
             max-width: 600px;
+            margin: 0 auto;
         }
 
+        /* Layout principal */
         .va-shell {
             display: grid;
             grid-template-columns: 300px 1fr;
-            gap: 16px;
+            gap: 20px;
             align-items: stretch;
         }
 
         @media (max-width: 1024px) {
             .va-shell {
                 grid-template-columns: 250px 1fr;
-                gap: 12px;
+                gap: 16px;
             }
         }
 
@@ -90,23 +130,29 @@
             }
         }
 
-        /* Tarjetas */
+        /* Tarjetas con estilo Villa & Asociados */
         .va-card {
-            background: var(--va-surface);
-            border: 1px solid var(--va-outline);
-            border-radius: var(--va-radius);
-            box-shadow: var(--va-shadow);
+            background: var(--white);
+            border: 1px solid var(--ring);
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
             overflow: hidden;
+            transition: var(--transition);
         }
 
-        .va-card>.va-card-h {
+        .va-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 24px rgba(0,0,0,0.12);
+        }
+
+        .va-card > .va-card-h {
             padding: 16px 16px 0;
             display: flex;
             align-items: center;
             gap: 10px;
         }
 
-        .va-card>.va-card-c {
+        .va-card > .va-card-c {
             padding: 16px;
         }
 
@@ -114,20 +160,23 @@
             margin: 0;
             font-size: 1.1rem;
             font-weight: 700;
+            color: var(--charcoal);
         }
 
         .va-note {
-            color: var(--va-muted);
+            color: var(--charcoal);
             font-size: .92rem;
             line-height: 1.4;
+            opacity: 0.8;
         }
 
-        /* Form */
+        /* Formularios */
         label {
             font-weight: 600;
             font-size: .92rem;
             display: block;
             margin: 10px 0 6px;
+            color: var(--graphite);
         }
 
         input[type="text"],
@@ -139,18 +188,20 @@
             width: 100%;
             padding: 12px 14px;
             border-radius: 12px;
-            border: 1px solid var(--va-outline);
-            background: #fffaf0;
-            color: var(--va-ink);
+            border: 1px solid var(--ring);
+            background: var(--sand-2);
+            color: var(--graphite);
             outline: none;
-            font-size: 16px; /* Previene zoom en iOS */
+            font-family: "Montserrat", sans-serif;
+            font-size: 16px;
+            transition: var(--transition);
         }
 
         input:focus,
         select:focus,
         textarea:focus {
-            box-shadow: 0 0 0 3px rgba(111, 155, 210, .35);
-            border-color: var(--va-focus);
+            box-shadow: 0 0 0 3px rgba(184, 154, 114, 0.35);
+            border-color: var(--accent);
         }
 
         .va-row {
@@ -177,6 +228,7 @@
             }
         }
 
+        /* Botones con estilo Villa & Asociados */
         .va-actions {
             display: flex;
             gap: 8px;
@@ -185,38 +237,40 @@
         }
 
         .btn {
-            border: 1px solid var(--va-outline);
-            background: #fff7e7;
-            color: var(--va-ink);
+            border: 1px solid var(--ring);
+            background: var(--charcoal);
+            color: var(--white);
             padding: 12px 18px;
-            border-radius: 999px;
+            border-radius: 12px;
             cursor: pointer;
-            font-weight: 700;
+            font-weight: 600;
             text-decoration: none;
             font-size: 1rem;
             transition: var(--transition);
-            min-height: 44px; /* Tamaño táctil mínimo */
+            min-height: 44px;
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            font-family: "Montserrat", sans-serif;
         }
 
         .btn.primary {
-            background: linear-gradient(90deg, var(--va-primary), #d2b47a);
-            color: #1f1a12;
+            background: var(--charcoal);
+            color: var(--white);
             border: none;
         }
 
         .btn:hover {
+            background: var(--graphite);
             transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
+        /* Resultados */
         .va-res {
-            border: 1px dashed var(--va-outline);
+            border: 1px dashed var(--ring);
             border-radius: 12px;
             padding: 16px;
-            background: #fffaf0;
+            background: var(--sand-2);
             line-height: 1.5;
         }
 
@@ -226,20 +280,21 @@
             gap: 8px;
             padding: 8px 12px;
             border-radius: 999px;
-            background: #fff7e7;
-            border: 1px solid var(--va-outline);
+            background: var(--sand-2);
+            border: 1px solid var(--ring);
             font-weight: 700;
             font-size: 0.95rem;
+            color: var(--graphite);
         }
 
         .va-divider {
             height: 1px;
-            background: var(--va-outline);
+            background: var(--ring);
             margin: 16px 0;
             opacity: .7;
         }
 
-        /* Lateral - Menú responsive */
+        /* Navegación lateral */
         .va-side {
             position: relative;
             align-self: stretch;
@@ -251,14 +306,15 @@
             text-align: left;
             padding: 16px;
             border-radius: 14px;
-            border: 1px solid var(--va-outline);
-            background: var(--va-surface-2);
+            border: 1px solid var(--ring);
+            background: var(--sand-2);
             font-weight: 600;
-            color: var(--va-ink);
+            color: var(--graphite);
             cursor: pointer;
             align-items: center;
             justify-content: space-between;
             margin-bottom: 8px;
+            font-family: "Montserrat", sans-serif;
         }
 
         @media (max-width: 880px) {
@@ -289,39 +345,41 @@
             text-align: left;
             padding: 14px 16px;
             border-radius: 14px;
-            border: 1px solid var(--va-outline);
-            background: var(--va-surface-2);
+            border: 1px solid var(--ring);
+            background: var(--sand-2);
             font-weight: 600;
-            color: var(--va-ink);
+            color: var(--graphite);
             cursor: pointer;
             display: flex;
             align-items: center;
             gap: 12px;
             transition: var(--transition);
             min-height: 50px;
+            font-family: "Montserrat", sans-serif;
         }
 
         .va-nav button:hover {
             transform: translateY(-1px);
             box-shadow: 0 6px 18px rgba(0, 0, 0, .08);
-            background: linear-gradient(180deg, var(--va-surface-3), #fff7e7);
-            border-color: var(--va-primary);
+            background: var(--sand);
+            border-color: var(--accent);
         }
 
         .va-nav button[aria-current="page"] {
-            background: linear-gradient(180deg, var(--va-surface-2), #fff7e7);
-            border-color: var(--va-primary);
+            background: var(--sand);
+            border-color: var(--accent);
         }
 
         .va-ico {
             width: 18px;
             height: 18px;
-            stroke: var(--va-muted);
+            stroke: var(--charcoal);
             fill: none;
             stroke-width: 2;
             stroke-linecap: round;
             stroke-linejoin: round;
             flex-shrink: 0;
+            opacity: 0.8;
         }
 
         .va-main .va-module {
@@ -337,10 +395,11 @@
         .va-legal {
             margin: 24px 0 0;
             padding: 12px 0;
-            border-top: 1px solid var(--va-outline);
-            color: var(--va-muted);
+            border-top: 1px solid var(--ring);
+            color: var(--charcoal);
             font-size: .85rem;
             line-height: 1.5;
+            opacity: 0.8;
         }
 
         .va-main .va-module.active .va-card-c {
@@ -360,10 +419,22 @@
             flex-direction: column;
         }
 
-        /* Mejoras para móviles */
+        /* Footer estilo Villa & Asociados */
+        .footer {
+            text-align: center;
+            font-size: 0.85rem;
+            color: var(--charcoal);
+            margin-top: 40px;
+            padding: 25px 20px;
+            border-top: 1px solid var(--ring);
+            background: var(--sand-2);
+            border-radius: var(--radius);
+        }
+
+        /* Responsive */
         @media (max-width: 640px) {
             .va-calc {
-                --pad: 12px;
+                padding: 0 12px;
                 margin: 16px auto 48px;
             }
             
@@ -431,13 +502,19 @@
 </head>
 
 <body>
+    <!-- Encabezado estilo Villa & Asociados -->
+    <header class="topbar">
+        <div class="brand">
+            <div class="logo">VA</div>
+            <div class="brand-text">Villa &amp; Asociados<br><small>Licencias y beneficios bancarios</small></div>
+        </div>
+    </header>
+
     <section class="va-calc" id="calc-licencias-bancarias">
         <header class="va-header">
             <div>
-                <h1 class="va-title">PERSONAL BANCARIO: CONSULTÁ TUS LICENCIAS Y BENEFICIOS <span
-                        style="font-weight:700;color:var(--va-primary)">CCT 18/75</span></h1>
-                <p class="va-sub">Elegí un módulo, cargá una fecha y conocé qué te corresponde. Basado en CCT 18/75 y
-                    LCT.</p>
+                <h1 class="va-title">PERSONAL BANCARIO: CONSULTÁ TUS LICENCIAS Y BENEFICIOS <span style="font-weight:700;color:var(--accent)">CCT 18/75</span></h1>
+                <p class="va-sub">Elegí un módulo, cargá una fecha y conocé qué te corresponde. Basado en CCT 18/75 y LCT.</p>
             </div>
         </header>
 
@@ -772,7 +849,7 @@
                         </div>
                         <div class="va-divider"></div>
                         <div id="resFall" class="va-res" aria-live="polite"></div>
-                        <div class="va-legal">Base legal/CCT: CCT 18/75: 5 días corridos (familiar directo) y 2 días
+                        <div class="va-legal">Base legal/CCT: CCT 18/75: 5 días corridos (familiar directo) and 2 días
                             (otros). LCT prevé 3 y 1 respectivamente (art. 158).</div>
                     </div>
                 </section>
@@ -924,6 +1001,11 @@
             </main>
         </div>
     </section>
+
+    <!-- Footer estilo Villa & Asociados -->
+    <div class="footer">
+        © Villa &amp; Asociados — Herramientas profesionales orientativas. Confirmá siempre la información con la documentación del caso y la consulta profesional.
+    </div>
 
     <script>
         // ======= Utilidades de fecha =======
@@ -1162,7 +1244,7 @@
         // ======= Smoke tests (consola) =======
         (function runSmokeTests() {
             try {
-                console.group('%cVA calc tests', 'color:#b08b57');
+                console.group('%cVA calc tests', 'color:#b89a72');
                 // addBiz mueve sábado→lunes con +1 hábil
                 const sat = '2025-11-08';
                 const nextBiz = addBiz(sat, 1);
