--- a/indemnizacion.html
+++ b/indemnizacion.html
@@ -598,7 +598,7 @@
     <header class="topbar">
         <div class="brand">
             <div class="logo">VA</div>
-            <div>Villa &amp; Asociados<br><small>Simula la indemnizacion que te corresponde</small></div>
+            <div>Villa &amp; Asociados<br><small>Calcula tu indemnización</small></div>
         </div>
     </header>
 
