--- a/dias_habiles.html
+++ b/dias_habiles.html
@@ -28,7 +28,7 @@
 
   /* Topbar base */
   .topbar{position:sticky;top:0;z-index:100;background:var(--sand);border-bottom:1px solid var(--ring);padding:14px 22px;display:flex;align-items:center;justify-content:space-between;box-shadow:0 2px 10px rgba(0,0,0,.05)}
-  .brand{display:flex;align-items:center;gap:12px;font-weight:700;color:var(--graphite)}
+  .brand{display:flex;align-items:center;gap:12px;font-weight:700;color:var(--graphite);cursor:pointer;text-decoration:none;}
   .logo{width:42px;height:42px;border-radius:10px;display:grid;place-items:center;background:var(--sand-2);border:1px solid var(--ring);font-weight:800;color:var(--graphite);transition:var(--transition)}
   .brand:hover .logo{transform:rotate(5deg);background:var(--accent);color:#fff}
   .brand small{font-size:.75rem;font-weight:600;color:var(--charcoal);opacity:.95}
@@ -96,10 +96,10 @@
 <body>
   <!-- Topbar base -->
   <header class="topbar">
-    <div class="brand">
+    <a class="brand" href="https://estudio-villa.com" aria-label="Ir a Estudio Villa">
       <div class="logo">VA</div>
       <div>Villa &amp; Asociados<br><small>Contador de días hábiles judiciales</small></div>
-    </div>
+    </a>
   </header>
 
   <main class="wrap">
