--- a/indemnizacion.html
+++ b/indemnizacion.html
@@ -57,6 +57,8 @@
             font-weight: 700;
             letter-spacing: .3px;
             color: var(--graphite);
+            cursor:pointer;
+            text-decoration:none;
         }
 
         .logo {
@@ -596,10 +598,10 @@
 <body>
     <!-- Encabezado (web) -->
     <header class="topbar">
-        <div class="brand">
+        <a class="brand" href="https://estudio-villa.com" aria-label="Ir a Estudio Villa">
             <div class="logo">VA</div>
             <div>Villa &amp; Asociados<br><small>Calcula tu indemnización</small></div>
-        </div>
+        </a>
     </header>
 
     <!-- Encabezado para impresión general -->
