--- a/prorrateo_honorarios.html
+++ b/prorrateo_honorarios.html
@@ -25,7 +25,7 @@
 
     /* Topbar (base) */
     .topbar{background:var(--sand);border-bottom:1px solid var(--ring);padding:14px 22px;display:flex;align-items:center;justify-content:space-between;position:sticky;top:0;z-index:100;box-shadow:0 2px 10px rgba(0,0,0,.05)}
-    .brand{display:flex;align-items:center;gap:12px;font-weight:700;color:var(--graphite)}
+    .brand{display:flex;align-items:center;gap:12px;font-weight:700;color:var(--graphite);cursor:pointer;text-decoration:none;}
     .logo{width:42px;height:42px;border-radius:10px;display:grid;place-items:center;background:var(--sand-2);border:1px solid var(--ring);font-weight:800;color:var(--graphite);transition:var(--transition)}
     .brand:hover .logo{transform:rotate(5deg);background:var(--accent);color:#fff}
     .brand-text{line-height:1.2}
@@ -136,10 +136,10 @@
 <body>
   <!-- Encabezado del sistema -->
   <header class="topbar">
-    <div class="brand">
+    <a class="brand" href="https://estudio-villa.com" aria-label="Ir a Estudio Villa">
       <div class="logo">VA</div>
       <div class="brand-text">Villa &amp; Asociados<br><small>Calculadora de prorrateo de honorarios</small></div>
-    </div>
+    </a>
   </header>
 
   <main class="wrap">
