--- a/indemnizacion_accidentes.html
+++ b/indemnizacion_accidentes.html
@@ -94,7 +94,7 @@
         <label for="percent">Porcentaje de incapacidad (%)</label>
         <input type="number" id="percent" step="0.1" min="0" max="100" required />
 
-        <label><input type="checkbox" id="itinere" /> Accidente in itinere (+20%)</label>
+        <label><input type="checkbox" id="itinere" /> Accidente in itinere (-20%)</label>
         <button type="submit">Calcular</button>
       </form>
       <div id="result"></div>
